--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
                 <img src="images/logo.png" style="width:100px;height:100px;> 
-            <a class="navbar-brand" href="#"><h1>LK Designs</h1></a>
+            <a class="navbar-brand" href="#"><h1></h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
