--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
                 <div id="logo">
-                    <a href="#" data-toggle="tooltip" title="Laszlo's Logo"><img id="preload" src="images/logo.png" style="display:none; width:100px; height:100px;" /></a>
+                    <a href="#" data-toggle="tooltip" title="Laszlo's Logo"><img id="preload" src="images/Logo.png" style="display:none; width:100px; height:100px;" /></a>
                     </div>
  
             <a class="navbar-brand" href="#"><h4>Laszlo Kovesdi</h4></a>
