--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -46,6 +47,20 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#contactlaszlo"><i class="fas fa-mobile-alt"></i>  Contact Laszlo</a>
+                    </li>
+
+                    <li>
+
+                            <div class="input-group">
+                                    <input type="text" class="form-control clearButton" placeholder="Search for...">
+                                    <span class="input-group-btn">
+                                      <button class="btn btn-secondary clearButton" type="button" onclick="window.location.href='searchResults.html'">Go!</button>
+                                    </span>
+                                  </div>
+                                </div>
+                              </div>
+                
+
                     </li>
 
 
@@ -236,6 +251,18 @@
                                                       <a class="dropdown-item" href="#">Start Up looking for help</a>
                                                     </div>
                                                   </div>
+
+<br>
+
+                                                  <form class="navbar-form navbar-left" role="search">
+                                                        <div class="form-group">
+                                                          <input type="text" class="form-control" placeholder="Search">
+                                                        </div>
+                                                        <button type="submit" class="btn btn-default">Submit</button>
+                                                      </form>
+                                    
+
+
                                     </form>
                                 </div>
                             </div>
